<resources>
    <string name="app_name">Stock Survey</string>
    <string name="action_settings">Settings</string>
    <string name="sync_masters">Sync Masters</string>
    <string name="stock_survey">Stock Survey</string>
    <string name="stock_report">Stock Report</string>
    <string name="sync_stock">Sync Stock</string>
    <string name="stock_reset">Stock Reset</string>
    <string name="stock_hint">Before Stock Survey, first press on Sync Masters</string>
    <string name="title_activity_stock_survey">New Stock Survey</string>
    <string name="Code">Code</string>
    <string name="Name">Name</string>
    <string name="Lot">Lot</string>
    <string name="Qty">Quantity</string>
    <string name="DateTime">Date and Time</string>
    <string name="Save">Save</string>
    <string name="Back">Back</string>
    <string name="stock_survey_saved">Stock Survey Saved</string>
    <string name="title_activity_stock_report">Stock Report</string>
    <string name="please_wait">Please wait</string>
    <string name="requesting_masters_data">Requesting Masters Data</string>
    <string name="code_not_found">Code Not Found</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="ws_comm_error">WebService Communication Error</string>
    <string name="sync_success">Sync Succes"</string>
    <string name="code_lot_qty_not_empty">Code, Lot and Qty can not be empty</string>
</resources>
