<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/txtv_Header"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="top|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/stock_hint"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_masters"
        android:id="@+id/btn_SyncMasters"
        android:layout_below="@+id/txtv_Header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_survey"
        android:id="@+id/btn_StockSurvey"
        android:layout_marginTop="23dp"
        android:layout_below="@+id/btn_SyncMasters"
        android:layout_alignRight="@+id/btn_SyncMasters"
        android:layout_alignEnd="@+id/btn_SyncMasters"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_report"
        android:id="@+id/btn_StockReport"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/btn_StockSurvey"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_report"
        android:id="@+id/btn_SyncStock"
        android:layout_below="@+id/btn_StockReport"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_reset"
        android:id="@+id/btn_StockReset"
        android:layout_below="@+id/btn_SyncStock"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

</RelativeLayout>
