<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="py.com.unionsrl.stocksurvey.StockSurveyActivity"
                android:id="@+id/activity_stock_survey">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_stock_survey"
        android:id="@+id/txtv_Header"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="top|center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Code"
        android:id="@+id/txtv_Code"
        android:layout_below="@+id/txtv_Header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_Code"
        android:layout_alignBottom="@+id/txtv_Code"
        android:layout_toRightOf="@+id/txtv_Code"
        android:layout_toEndOf="@+id/txtv_Code"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:inputType="number"
        android:digits="0123456789"
        android:editable="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:id="@+id/txtv_Name"
        android:layout_below="@+id/txtv_Code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Lot"
        android:id="@+id/txtv_Lot"
        android:layout_below="@+id/txtv_Name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_Lot"
        android:layout_alignBottom="@+id/txtv_Lot"
        android:layout_alignLeft="@+id/etxt_Code"
        android:layout_alignStart="@+id/etxt_Code"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Qty"
        android:id="@+id/txtv_Qty"
        android:layout_below="@+id/etxt_Lot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etxt_Qty"
        android:layout_alignBottom="@+id/txtv_Qty"
        android:layout_toRightOf="@+id/etxt_Lot"
        android:layout_toEndOf="@+id/etxt_Lot"
        android:inputType="number"
        android:digits="0123456789"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Save"
        android:id="@+id/btn_Save"
        android:layout_below="@+id/txtv_Qty"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:id="@+id/btn_Back"
        android:onClick="backMain"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
